2001-10-10  Akim Demaille  <akim@epita.fr>

	* lib/autoconf/general.m4 (_AC_INCLUDES_DEFAULT_REQUIREMENTS)
	(AC_INCLUDES_DEFAULT): Move to...
	* lib/autoconf/headers.m4: here.
	* lib/autoconf/types.m4: Comment changes.
	* doc/autoconf.texi: Specify where the default includes are used
	in the macro prototypes.

2001-10-09  Akim Demaille  <akim@epita.fr>

	* lib/autoconf/autoconf.m4 (m4_patsubst, m4_regexp): New
	transition code.

2001-10-08  Akim Demaille  <akim@epita.fr>

	* bin/autoreconf.in (&autoreconf): Remove debugging code.
	(&parse_args): Pass verbosity/debugging options to subtools when
	--debug, not when --verbose.
	* lib/autom4te.in (Autoreconf-preselections): New.
	(Autoconf): Use it.

2001-10-08  Akim Demaille  <akim@epita.fr>

	* bin/autoreconf.in (autoreconf): Run libtoolize when appropriate.

2001-10-08  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (autoreconf Invocation): Adjust.
	* bin/autoreconf.in (autoreconf): Run gettextize when appropriate.

2001-10-08  Akim Demaille  <akim@epita.fr>

	* tests/tools.at (AT_CHECK_PERL_SYNTAX): Check autoreconf.
	(Syntax of the shell scripts): Don't.
	* bin/autoheader.in, bin/autom4te.in, bin/autoreconf.in: Don't
	bother with $force since...
	* lib/Autom4te/General.pm: does.

2001-10-08  Akim Demaille  <akim@epita.fr>

	* bin/autoreconf.in: Rewrite in Perl.
	* configure.ac: Adjust.
	* lib/Autom4te/General.pm (&up_to_date_p): New.
	* bin/autom4te.in (&up_to_date_p): Use it.
	Rename as...
	(&up_to_date): this.

2001-10-08  Akim Demaille  <akim@epita.fr>

	* lib/m4sugar/m4sugar.m4 (m4_case, m4_bmatch, m4_normalize)
	(m4_list_cmp): Use $0 to reinvoke yourself.
	(m4_patsubsts): New.
	(m4_strip, m4_version_unletter): Use it.
	* tests/atspecific.m4 (AT_DATA_M4SUGAR, AT_DATA_M4SH): Likewise.

2001-10-08  Akim Demaille  <akim@epita.fr>

	* lib/autoconf/autoconf.m4, lib/autoconf/general.m4,
	* lib/autoconf/libs.m4, lib/autoconf/status.m4,
	* lib/autoconf/types.m4, lib/autotest/general.m4,