@@ -1,5 +1,12 @@
 2001-10-10  Akim Demaille  <akim@epita.fr>
 
+	* lib/m4sugar/m4sh.m4 (_AS_ECHO_N_PREPARE): m4_defun, not
+	m4_define, since...
+	(_AS_ECHO_N): AS_REQUIREs it.
+
+	
+2001-10-10  Akim Demaille  <akim@epita.fr>
+
 	* lib/autoconf/general.m4 (_AC_INCLUDES_DEFAULT_REQUIREMENTS)
 	(AC_INCLUDES_DEFAULT): Move to...
 	* lib/autoconf/headers.m4: here.
